# AgenteInvestimentoProjeto

./: .gitignore  ANALISAR_AGENTE_INVESTIMENTO_METODO_MONTE_CARLO.ipynb  MonteCarloSimulationCarteiraOB.py  MonteCarloSimulationOB.py  MonteCarloSimulationV2.py  README.md  RNN_Monte_Carlo.py  RNN_Monte_Carlo_POO_Carteira.py  analisar_carteira_selecionada.py  backtesting_grafico.py  backtesting_sem_grafico.py  backtesting_sem_grafico_v2.py  backtesting_sem_grafico_v3.py  carteira_aleatoria_otima_orientado_objeto.py  chamar_classe_carteira_aleatoria.py  chamar_classe_monte_carlo_simulacao.py  chamar_classe_monte_carlo_simulacao_v2.py  chamar_classe_probabilidade_futuro.py  correlacao.py  econofisica_agente_estrategista.py  econofisica_agente_estrategista_disputa.py  econofisica_agente_estrategista_petr4.py  econofisica_agente_estrategista_volume.py  estatistica_prob_futuro_ativo.py  estatistica_prob_futuro_carteira.py  estatistica_prob_futuro_carteira_v2.py  lista_ativos_setores.py  probabilidade_futuro_sem_grafico.py  probabilidade_preco_futuro_ativo.py  probabilidade_preco_futuro_ativo_grafico.py  probabilidade_preco_futuro_grafico_OB.py  processo_backtesting.txt  pyproject.toml  requirements.txt  resultados.csv  teste.py  tratamento_saida_carteira_aleatoria.py
Resultados/: .~lock.EstatisticaBacktesting.ods#  EstatisticaBacktesting.ods  ler_resultados.py  pipeline_ultima_execucao.json  reavaliacao_backtesting.csv  resultados01.csv  resultados02.csv  resultados03.csv  resultados04.csv  resultados05.csv  resultados06.csv  resultados07.csv  resultados08.csv  resultados09.csv  (+24 more)
(+25 files in other folders)
