[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agente-investimento"
version = "2.0.0"
description = "Agente de análise de investimentos para a B3: seleção de carteiras, simulação de Monte Carlo multivariada e backtesting walk-forward"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cristiano Alves" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "yfinance>=0.2.40",
    "matplotlib>=3.8",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
rnn = ["tensorflow>=2.15"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
